new wood turning project

--- a/Personal Site/Pages/Turning.cshtml
+++ b/Personal Site/Pages/Turning.cshtml
@@ -145,3 +145,27 @@
         <figcaption>This is a kind of small wineglass, usually used for desert wines. As I was turning, I discovered a large whole in the middle of the wood. I tried mixing some iridescent ink with epoxy to fill it. While the shininess of the ink didn't come through too well, the overall piece is quite pleasing. I'm getting better at these. This one only took me about an hour.</figcaption>
     </figure>
 </section>
+
+<section>
+    <h2>A snack bowl</h2>
+    <figure>
+        <a href="/turning/H1.jpg" target="_blank">
+            <img src="/turning/H1.jpg" alt="Photo of wood working project" title="A snack bowl">
+        </a>
+        <figcaption>A snack bowl I made for my 7-year-old son. The top is maple. It was a little green when I turned it, so it did warp and crack a little, but I managed to keep it together. I accidentally tore a hole through the bottom while parting it, but that was serendipitous because I found this amazing board of poplar at Home Depot of all places. It's got purples and greens and all kinds of swirls. Painted his initial in the bottom before sealing with polyurethane.</figcaption>
+    </figure>
+
+    <figure>
+        <a href="/turning/H2.jpg" target="_blank">
+            <img src="/turning/H2.jpg" alt="Photo of wood working project" title="A snack bowl">
+        </a>
+        <figcaption>Detail of side.</figcaption>
+    </figure>
+
+    <figure>
+        <a href="/turning/H3.jpg" target="_blank">
+            <img src="/turning/H3.jpg" alt="Photo of wood working project" title="A snack bowl">
+        </a>
+        <figcaption>Detail of bottom.</figcaption>
+    </figure>
+</section>
