--- a/Personal Site/Pages/Status.cshtml
+++ b/Personal Site/Pages/Status.cshtml
@@ -22,5 +22,5 @@
     }
 }
 
-<img src="https://http.cat/@Model.Code" style="display:block;margin:0 auto" />
+<img src="https://http.cat/@Request.RouteValues["Code"]" style="display:block;margin:0 auto" />
 <a href="~/">Return home</a>
