--- a/TypeScript Code/src/apps/yabs/styles.css
+++ b/TypeScript Code/src/apps/yabs/styles.css
@@ -1,4 +1,4 @@
-﻿html, body, .cloud, .cloud-bit, .frowny, .shadow, .boop, .beam, .subBeam, .endMessage, #scoreBox {
+﻿html, body, .endMessage, #scoreBox {
     position: absolute;
 }
 
@@ -17,7 +17,7 @@ body {
     background-image: linear-gradient(hsl(200, 50%, 50%), hsl(200, 20%, 75%) 75%, hsl(100, 75%, 50%) 75%, hsl(100, 100%, 20%));
 }
 
-#scoreBox, .endMessage, .frowny, #instructions, #starter {
+#scoreBox, .endMessage, #instructions, #starter {
     font-size: 24pt;
 }
 
@@ -36,65 +36,7 @@ body {
     z-index: 9001;
     pointer-events: none;
     color: white;
-}
-
-
-.cloud-bit {
-    background-color: white;
-    width: 100px;
-    height: 50px;
-    border-bottom-right-radius: 25px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 12.5px;
-    border-top-left-radius: 6.25px;
-}
-
-.frowny {
-    font-family: fixedsys, monospace;
-    padding: 5px;
-    border: solid 2px black;
-    border-radius: 10px;
-    transform: rotate(90deg);
-    width: 50px;
-    height: 50px;
-    overflow: hidden;
-}
-
-.shadow {
-    width: 45px;
-    height: 10px;
-    border-radius: 5px;
-    background-image: radial-gradient(black, transparent);
-    background-color: grey;
-}
-
-.boop {
-    display: none;
-    color: white;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 10pt;
-    z-index: 9001;
-}
-
-.beam, .subBeam {
-    display: none;
-    background-color: red;
-    box-shadow: 0 0 25px red;
-    left: 0;
-}
-
-.beam {
-    top: 0;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-}
-
-.subBeam {
-    top: 50%;
-    height: 2000px;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.75);
 }
 
 #instructions, #starter {
