more svg2png options

--- a/TypeScript Code/src/apps/svg2png/index.css
+++ b/TypeScript Code/src/apps/svg2png/index.css
@@ -19,8 +19,8 @@ form {
 }
 
 #sourceEditor {
-    min-width: min(40em, 83vw);
-    min-height: 30em;
+    width: min(40em, 83vw);
+    height: 30em;
 }
 
 dl.properties {
