--- a/TypeScript Code/src/apps/svg2png/index.css
+++ b/TypeScript Code/src/apps/svg2png/index.css
@@ -6,8 +6,7 @@
 
 form {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     gap: 1rem;
     justify-content: center;
     align-items: baseline;
