--- a/seanmcbeth.com/Pages/Index.cshtml
+++ b/seanmcbeth.com/Pages/Index.cshtml
@@ -102,7 +102,12 @@
     ("DLS VR", "Diplomatic Language Services Virtual Reality", "DLS VR Landing Page", "/dlsvr", "/img/dlsvr/screen1.jpeg",
     @"DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for
     subject matter experts to be able to rapidly create new immersion scenarios."),
-    ("AI Chat Bot", "AI Chat Bot", "A speech-based conversation with AI", "/apps/ai-chat-bot", "/img/ai-chat-bot.jpeg",
+    ("Svg2Png", "Svg2Png", "Converting vector images to raster images", "/apps/svg2png", "/js/apps/svg2png/screenshot.jpg",
+    @"A simple SVG to PNG/JPEG conversion tool. I built this for ""fun"" while editing some logos for a family member. It supports
+    drag-and-drop file upload, changing the background color of the image, and making minor edits to the SVG input."),
+    ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/turning/cover.jpg",
+    @"Some pictures of wooden cups and bowls I've made with my woodturning lathe."),
+    ("AI Chat Bot", "AI Chat Bot", "A speech-based conversation with AI", "/apps/ai-chat-bot", "/js/apps/ai-chat-bot/screenshot.jpg",
     @"The AI Chat Bot uses Speech-to-Text technology and some clever prompting of an OpenAI LLM to generate characterized responses,
     which are then piped out to a Text-to-Speech engine, with lip-sync."),
     ("Juniper", "Juniper", "A forest demo built with Juniper", "/juniper", "/img/juniper.jpeg",
@@ -112,9 +117,7 @@
     natural way to have sidebar conversations and congregate in the space. Much of the audio graph manipulation code ended up in Juniper."),
     ("Primrose", "Primrose", "Primrose text editor", "/primrose", "/img/primrose.jpeg",
     @"Primrose was the world's first JavaScript framework for developing WebXR applications, back when WebXR was still called ""WebVR"".
-    My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame."),
-    ("Woodturning", "Woodturning", "Wood working on a lathe", "/turning", "/turning/cover.jpg",
-    @"Some pictures of wooden cups and bowls I've made with my woodturning lathe.")
+    My first release of Primrose was sometime in 2014, almost a full year before Mozilla's A-Frame.")
     })
     {
         <figure>
