trying to convert Yarrow to use Sqlite

--- a/Yarrow/Yarrow/Pages/Editor/Reports/Detail.cshtml
+++ b/Yarrow/Yarrow/Pages/Editor/Reports/Detail.cshtml
@@ -397,7 +397,7 @@ else
                                 @log.Key
                             </td>
                             <td>
-                                @(log.Value?.ToJsonString() ?? "none")
+                                @(log.Value ?? "none")
                             </td>
                         </tr>
                     }
