--- a/Yarrow/Yarrow/Pages/Editor/Users/Detail.cshtml
+++ b/Yarrow/Yarrow/Pages/Editor/Users/Detail.cshtml
@@ -576,7 +576,7 @@
                             @log.Key
                         </td>
                         <td>
-                            @(log.Value?.ToJsonString() ?? "none")
+                            @(log.Value ?? "none")
                         </td>
                         <td>
                             <input type="checkbox"
