--- a/Yarrow/Yarrow/Pages/Editor/Logs.cshtml
+++ b/Yarrow/Yarrow/Pages/Editor/Logs.cshtml
@@ -117,7 +117,7 @@
                         @log.Key
                     </td>
                     <td>
-                        @(log.Value?.ToJsonString() ?? "none")
+                        @(log.Value ?? "none")
                         </td>
                         <td>
                             <input type="checkbox"
