some project cleanup

--- a/ImageViewer/Pages/Index.cshtml
+++ b/ImageViewer/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Head {
-    <script type="module" src="~/js/home/index.js"></script>
+    <script type="module" src="~/js/Pages/index.js"></script>
 }
 
 Hello, worldS
