--- a/Yarrow/Yarrow/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Yarrow/Yarrow/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,39 +13,46 @@
 
 <h1>@ViewData["Title"]</h1>
 <form id="account" method="post">
-    <section id="loginForm">
-        <div id="userNameGroup" class="form-group span-width">
-            <label asp-for="Input.Email"></label>
-            <input asp-for="Input.Email" class="form-control" />
-            <span asp-validation-for="Input.Email" class="text-danger"></span>
-        </div>
-        <div id="meetingIDGroup" class="form-group span-width">
-            <label asp-for="Input.Password"></label>
-            <input asp-for="Input.Password" class="form-control" />
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
-        </div>
-
-        <div id="loginControls">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <span class="checkbox">
-                    <label asp-for="Input.RememberMe">
-                        <input asp-for="Input.RememberMe" />
-                        @Html.DisplayNameFor(m => m.Input.RememberMe)
-                    </label>
-                </span>
-
-                <button type="submit" class="btn btn-primary">Log in</button>
+    @if (Model.Input is null
+        || Model.Input.Email is null)
+    {
+    }
+    else
+    {
+        <section id="loginForm">
+            <div id="userNameGroup" class="form-group span-width">
+                <label asp-for="Input!.Email"></label>
+                <input asp-for="Input!.Email" class="form-control" />
+                <span asp-validation-for="Input!.Email" class="text-danger"></span>
+            </div>
+            <div id="meetingIDGroup" class="form-group span-width">
+                <label asp-for="Input!.Password"></label>
+                <input asp-for="Input!.Password" class="form-control" />
+                <span asp-validation-for="Input!.Password" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <p>
-                    <a href="ForgotPassword">Forgot your password?</a>
-                </p>
-                <p>
-                    <a href="RequestAccount">Request a user account</a>
-                </p>
+            <div id="loginControls">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <span class="checkbox">
+                        <label asp-for="Input!.RememberMe">
+                            <input asp-for="Input!.RememberMe" />
+                            @Html.DisplayNameFor(m => m.Input!.RememberMe)
+                        </label>
+                    </span>
+
+                    <button type="submit" class="btn btn-primary">Log in</button>
+                </div>
+
+                <div class="form-group">
+                    <p>
+                        <a href="ForgotPassword">Forgot your password?</a>
+                    </p>
+                    <p>
+                        <a href="RequestAccount">Request a user account</a>
+                    </p>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    }
 </form>
