improving GTK appshell

--- a/ImageViewer/Pages/Index.cshtml
+++ b/ImageViewer/Pages/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 @section Head {
+    <link rel="stylesheet" type="text/css" href="~/js/Pages/index.css"></script>
     <script type="module" src="~/js/Pages/index.js"></script>
 }
 
-Hello, worldS
-<a href="https://seanmcbeth.com">My website</a>
+<canvas></canvas>
