show JS console in AppShell.GTK

--- a/ImageViewer/Pages/Index.cshtml
+++ b/ImageViewer/Pages/Index.cshtml
@@ -8,5 +8,5 @@
     <link rel="stylesheet" type="text/css" href="~/js/Pages/index.css"></script>
     <script type="module" src="~/js/Pages/index.js"></script>
 }
-
+<button id="go">GO</button>
 <canvas></canvas>
