--- a/Gurt/Pages/Shared/_Layout.cshtml
+++ b/Gurt/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ImageViewer</title>
+    <title>@ViewData["Title"] - Gurt</title>
     <link rel="stylesheet" href="~/js/Pages/Shared/index.css"></script>
     <script type="module" src="~/js/Pages/Shared/index.js"></script>
 
