--- a/Gurt/Pages/_ViewImports.cshtml
+++ b/Gurt/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ImageViewer
-@namespace ImageViewer.Pages
+﻿@using Gurt
+@namespace Gurt.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
