build system is getting nicer every day

--- a/Gurt/Pages/Shared/_Layout.cshtml
+++ b/Gurt/Pages/Shared/_Layout.cshtml
@@ -1,21 +1,23 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Gurt</title>
-    <link rel="stylesheet" href="~/js/Pages/Shared/index.css"></script>
+    <link rel="stylesheet" href="~/js/Pages/Shared/index.css">
+    </script>
     <script type="module" src="~/js/Pages/Shared/index.js"></script>
 
     @await RenderSectionAsync("Head", required: false)
 </head>
+
 <body>
     <header>
         @await RenderSectionAsync("Header", required: false)
     </header>
     <div class="scroll">
         <main>
-            <button id="closeBtn">Close</button>
             @RenderBody()
         </main>
     </div>
@@ -24,4 +26,5 @@
         @await RenderSectionAsync("Footer", required: false)
     </footer>
 </body>
+
 </html>
