--- a/Gurt/Pages/Index.cshtml
+++ b/Gurt/Pages/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
@@ -8,5 +7,5 @@
     <link rel="stylesheet" type="text/css" href="~/js/Pages/index.css"></script>
     <script type="module" src="~/js/Pages/index.js"></script>
 }
-<button id="go">GO</button>
-<canvas></canvas>
+
+<canvas id="frontBuffer"></canvas>
