--- a/Gurt/Pages/index.css
+++ b/Gurt/Pages/index.css
@@ -1,3 +1,5 @@
-body {
-    background-color: green;
+canvas#frontBuffer {
+    width: 100%;
+    height: 100%;
+    image-rendering: optimizeQuality;
 }
