--- a/Gurt/wwwroot/js/Pages/index.css
+++ b/Gurt/wwwroot/js/Pages/index.css
@@ -1,5 +1,7 @@
 /* Pages/index.css */
-body {
-  background-color: green;
+canvas#frontBuffer {
+  width: 100%;
+  height: 100%;
+  image-rendering: optimizeQuality;
 }
 /*# sourceMappingURL=index.css.map */
