About Me update

--- a/seanmcbeth.com/Pages/Index.cshtml
+++ b/seanmcbeth.com/Pages/Index.cshtml
@@ -71,9 +71,14 @@
     <h2>Bio</h2>
 
     <p>
-        I'm a cross-disciplinary Project Manager/Product Developer/Technical Lead, with 20 years of professional experience. I've successfully
+        I'm a DoD cleared, cross-disciplinary Project Manager/Technical Lead, with 20 years of professional experience. I've successfully
         bootstrapped and deployed multiple <abbr>VR</abbr> and <abbr>AR</abbr> projects in WebXR and Unity3D over
-        the last 8 years.
+        the last 8 years. 
+    </p>
+    <p>
+        I currently manage a team of software developers at <a href="https://spa.com" target="_blank" rel="nofollow noreferrer">Systems Planning and Analysis</a>,
+        working for the Department of Defense on building tools to manage research funding, adjudicate war games, and perform novel analysis on
+        trends in critical supply line security and technological innovation.
     </p>
 
     <p>
